package org.foxgames.battle;

public class BattleLoop {
}
