package org.foxgames.models;

public class Bug {
}
