package org.foxgames.persistence;

public class DataHandler {
    public static class BugIOSingleton {
    }
}
