package org.foxgames.storyBranch.battle.factory;

public class BugFactory {
}
